--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   shared_preferences: ^2.2.2
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
+  firebase_storage: ^12.4.7
   email_validator: ^2.1.17
   cloud_firestore: ^5.6.9
   icons_flutter: ^0.0.5
@@ -28,6 +29,10 @@ dependencies:
   flutter_material_color_picker: ^1.0.3
   flutter_colorpicker: ^1.0.3
   easy_localization: ^3.0.0
+  image_picker: ^1.1.1
+
+  cached_network_image: ^3.2.3
+
   
 
 dev_dependencies:
